--- a/services/guttering-carcroft.html
+++ b/services/guttering-carcroft.html
@@ -1,4 +1,4 @@
-ices<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-GB">
 <head>
 
@@ -294,18 +294,18 @@ document.getElementById("lightbox").style.display="none";
 "mainEntity": [
 {
 "@type": "Question",
-"name": "What types of internal minor home repairs do you handle?",
+"name": "How often should gutters be cleaned?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear and tear."
+"text": "Most homes need cleaning once or twice a year, usually in spring and autumn. Properties near trees may need it more often because leaves and debris build up faster."
 }
 },
 {
 "@type": "Question",
-"name": "Do you offer gutter cleaning and maintenance?",
+"name": "What happens if gutters are blocked?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage."
+"text": "When they are blocked, water cannot flow away properly. It overflows down the walls and can cause damp, stains, and damage to brickwork and foundations."
 }
 },
 {
@@ -318,74 +318,75 @@ document.getElementById("lightbox").style.display="none";
 },
 {
 "@type": "Question",
-"name": "What does exterior decorating include?",
+"name": "Can small leaks be fixed?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Exterior decorating covers external house painting, metal garden rails and gate painting, and fence painting to refresh your property's look and protect surfaces."
+"text": "Yes, most small leaks can be repaired by sealing joints, replacing short sections, or tightening loose parts instead of changing the whole system."
 }
 },
 {
 "@type": "Question",
-"name": "Do you offer uPVC restoration?",
+"name": "How do I know if repairs are needed?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity."
+"text": "Look for dripping water, sagging sections, cracks, or water marks on your walls. These are all signs something is not working properly."
+}
 }
 },
 {
 "@type": "Question",
-"name": "Can you clean my conservatory?",
+"name": "When is replacement the better option?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard."
+"text": "If the system is very old, badly cracked, rusted, or leaking in many places, replacement is usually more practical than constant repairs."
 }
 },
 {
 "@type": "Question",
-"name": "How often should I have my windows cleaned?",
+"name": "What materials are used today?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained."
+"text": "Modern systems are made from strong materials like plastic or metal that last longer and cope better with heavy rain."
 }
 },
 {
 "@type": "Question",
-"name": "What surfaces can you pressure wash?",
+"name": "Do you work on homes and businesses?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We pressure wash driveways, paths, walls, decking, and roofs, removing moss, algae, dirt, and grime safely and effectively."
+"text": "Yes, services are available for houses, shops, offices, and larger buildings."
 }
 },
 {
 "@type": "Question",
-"name": "Are your services suitable for all property types?",
+"name": "Can damage from bad weather be fixed?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific property needs."
+"text": "Strong wind and heavy rain can loosen parts or cause leaks. These problems can usually be repaired quickly."
 }
 },
 {
 "@type": "Question",
-"name": "Do you offer same-day or urgent repairs?",
+"name": "How long does cleaning take?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We aim to respond quickly and can often schedule repairs urgently to prevent further damage."
+"text": "Most jobs take between one and two hours, depending on the size of the building and how blocked the system is."
 }
 },
 {
 "@type": "Question",
-"name": "Is your work insured?",
+"name": "Will there be a mess left behind?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work."
+"text": "No, all waste is removed and the area is left clean and tidy."
 }
 },
 {
 "@type": "Question",
-"name": "How do I schedule a service?",
+"name": "Why use a local service?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Simply call us on 07735 873694 at a time convenient to you."
+"text": "A nearby team can respond faster, understands local conditions, and provides more reliable support."
 }
 }
 ]
