--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ document.getElementById("lightbox").style.display="none";
 "@type": "ListItem",
 "position": 2,
 "name": "Guttering Service",
-"item": "https://homerepairs4u.com/services/guttering.html"
+"item": "https://homerepairs4u.com/services/guttering-carcroft.html"
 }
 ]
 }
