--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -122,10 +122,10 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Section 1 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Internal Minor Home Repairs</h2>
-<p>Internal minor home repairs cover all the small jobs that make a big difference to your home. From fixing doors that won’t close properly and repairing damaged walls, to replacing broken fittings and sorting loose fixtures, every job is handled with care and attention to detail. These are the types of repairs that often get put off, but leaving them can lead to bigger problems later. Getting them sorted quickly keeps your home safe, tidy and comfortable. Whether it’s wear and tear, accidental damage or general maintenance, internal minor repairs help keep everything working as it should, without the cost or disruption of major building work.</p>
-<img src="/images/internal-repairs.webp"
-alt="Internal minor home repairs in Doncaster, fixing doors, walls, and small household issues professionally"
+<h2>Pressure Washing Carcroft</h2>
+<p>Our pressure washing service in Carcroft is designed to restore the appearance of your property quickly and effectively. Over time, outdoor surfaces collect dirt, algae, moss, oil stains and traffic marks that make them look tired and neglected. Using professional-grade pressure washing equipment, we remove deep-set grime from driveways, patios, paths, walls and decking without damaging the surface underneath. Each job is assessed carefully so the correct pressure and cleaning method is used for your specific material, whether it is block paving, concrete, tarmac or natural stone. Pressure washing not only improves how your property looks, it also makes areas safer by removing slippery growth and built-up residue. For homeowners and businesses in Carcroft, our service offers a fast, affordable way to refresh outdoor spaces and protect their surfaces from long-term damage. We take pride in delivering clean results, friendly service and lasting value.</p>
+<img src="/images/pressure-wash-3.webp"
+alt="Pressure washing driveway in Carcroft removing dirt, moss and stains from block paving."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
