--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -124,7 +124,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Pressure Washing Carcroft</h2>
 <p>Our pressure washing service in Carcroft is designed to restore the appearance of your property quickly and effectively. Over time, outdoor surfaces collect dirt, algae, moss, oil stains and traffic marks that make them look tired and neglected. Using professional-grade pressure washing equipment, we remove deep-set grime from driveways, patios, paths, walls and decking without damaging the surface underneath. Each job is assessed carefully so the correct pressure and cleaning method is used for your specific material, whether it is block paving, concrete, tarmac or natural stone. Pressure washing not only improves how your property looks, it also makes areas safer by removing slippery growth and built-up residue. For homeowners and businesses in Carcroft, our service offers a fast, affordable way to refresh outdoor spaces and protect their surfaces from long-term damage. We take pride in delivering clean results, friendly service and lasting value.</p>
-<img src="/images/pressure-wash-3.webp"
+<img src="/images/pressure-washing-patios.webp"
 alt="Pressure washing driveway removing oil stains, moss and dirt from block paving surface."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
