--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -146,10 +146,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 3 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Exterior Decorating</h2>
-<p>External decorating improves both the look and protection of your property. External house painting refreshes tired walls, boosts kerb appeal and adds a protective layer against weather damage. Painting garden rails and gates not only makes them look smarter but also helps prevent rust and wear. Fence painting keeps timber strong, protected from rot, and looking clean and well cared for. Regular exterior decorating helps your property stay attractive, increases its lifespan, and reduces the need for costly repairs caused by weather, damp and general wear and tear..</p>
+<h2>Pressure Cleaning Walls</h2>
+<p>Pressure cleaning walls is an excellent way to restore the fresh, clean look of any property. Over time, exterior walls collect layers of dirt, traffic pollution, algae, moss, and weather staining that can make even well-kept buildings look dull and uncared for. Professional pressure cleaning uses powerful equipment combined with the correct techniques to lift deep-set grime without damaging brickwork, render, stone, or cladding. Every surface is assessed first so the pressure level and cleaning method are matched to the material, ensuring safe and effective results. Cleaning walls not only improves appearance but also helps protect the structure by removing harmful growth that can trap moisture and slowly break down surfaces. Regular wall cleaning can prevent permanent staining, reduce maintenance costs, and extend the life of exterior finishes. It also makes properties safer and healthier by removing mould and algae that can affect air quality around entrances and windows. A freshly cleaned wall instantly improves kerb appeal, making homes more welcoming and businesses more professional. For property owners in Carcroft, pressure cleaning is a simple way to refresh tired exteriors and maintain long-term value. Whether it is a house, shop, office, or industrial unit, clean walls make a strong first impression and show that a property is well cared for. With the right equipment, experience, and attention to detail, pressure cleaning delivers reliable results that transform the look and feel of any building exterior.</p>
 <img src="/images/pressure-washing-walls.webp"
-alt="Exterior painting in Doncaster including houses, metal garden rails, gates and wooden fencing"
+alt="Pressure cleaning exterior wall in Carcroft removing dirt, algae and weather stains from brickwork"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
