--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -161,7 +161,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2>Jet Cleaning Decking</h2>
 <p>Pressure washing decking is one of the best ways to bring tired outdoor spaces back to life. Over time, decking becomes covered in dirt, algae, moss and food or drink spills that make it look dull and slippery. Professional pressure washing removes these layers safely, revealing the natural colour and texture of the wood or composite boards underneath. The correct pressure is used to avoid damage while still lifting deep-set grime from between the boards. Cleaning your decking not only improves its appearance but also makes it safer by reducing the risk of slips and falls. Regular washing helps extend the life of the decking by preventing rot, staining and surface breakdown caused by trapped dirt and moisture. For homeowners in Carcroft, pressure washing is a quick and affordable way to refresh garden areas and create a clean, inviting space for relaxing and entertaining.</p>
 <img src="/images/pressure-wash-decking.webp"
-alt="uPVC restoration in Doncaster with detailed cleaning of frames, doors, fascias and guttering"
+alt="Pressure washing wooden decking in Carcroft to remove dirt, moss, and algae."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -170,8 +170,30 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 5 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Conservatory Valets</h2>
-<p>Conservatory valets provide a thorough and detailed clean for your uPVC conservatory, both inside and out. This service includes washing the glass panels, frames, roof, and sills, removing dirt, algae, and water marks that build up over time. Every corner is carefully attended to, ensuring a spotless finish and restoring the conservatory’s original brightness. Regular conservatory valets help maintain the structure, protect the uPVC, and keep your space looking fresh, inviting, and well cared for all year round.</p>
+<h2>Full range of services</h2>
+<p>Pressure washing is a fast and effective way to remove dirt, grime, algae, and stains from outdoor surfaces. It instantly improves appearance, makes areas safer to walk on, and helps protect surfaces from long-term damage caused by trapped dirt and moisture. Our service includes.</p>
+<ul>
+<li>Driveways</li>
+<li>Patios</li>
+<li>Decking</li>
+<li>Paths and walkways</li>
+<li>Brick walls</li>
+<li>Rendered walls</li>
+<li>Fences</li>
+<li>Gates</li>
+<li>Garden walls</li>
+<li>Roof tiles</li>
+<li>Gutters and facias</li>
+<li>Soffits</li>
+<li>Conservatory roofs</li>
+<li>Cladding</li>
+<li>Garage doors</li>
+<li>Garden Furniture</li>
+<li>Steps and stairways</li>
+<li>Balconies</li>
+<li>Car parks</li>
+<li>Play areas and courts</li> 
+</ul>
 <img src="/images/conservatory-before-after.webp"
 alt="Full conservatory valet in Doncaster including inside and outside cleaning of glass, frames and roof"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
