--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -172,7 +172,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <section style="margin-bottom:40px; text-align:center;">
 <h2>Full range of services</h2>
 <p>Pressure washing is a fast and effective way to remove dirt, grime, algae, and stains from outdoor surfaces. It instantly improves appearance, makes areas safer to walk on, and helps protect surfaces from long-term damage caused by trapped dirt and moisture. Our service includes.</p>
-<ul>
+<ul style="text-align: left;">
 <li>Driveways</li>
 <li>Patios</li>
 <li>Decking</li>
