--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title>Pressure Washing Carcroft - Driveway, Patio & Exterior Cleaning Services</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/pressue-washing-carcroft.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-carcroft.html">
 <meta name="description" content="Professional pressure washing in Carcroft for driveways, patios, roofs and exteriors. Reliable local service delivering powerful cleaning and long-lasting results.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
@@ -170,7 +170,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 5 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Full range of services</h2>
+<h2>Full Range of Pressure Washing Services</h2>
 <p>Pressure washing is a fast and effective way to remove dirt, grime, algae, and stains from outdoor surfaces. It instantly improves appearance, makes areas safer to walk on, and helps protect surfaces from long-term damage caused by trapped dirt and moisture. Our service includes.</p>
 <ul style="text-align: left;">
 <li>Driveways</li>
@@ -202,79 +202,56 @@ tabindex="0"
 onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
 
-<!-- Section 6 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Regular Window Cleaning</h2>
-<p>Regular window cleaning keeps your home or business looking smart, bright and well maintained. Clean windows let in more natural light and improve the overall appearance of your property. A reliable regular service means your windows are kept consistently clear without you having to worry about it. Frames, sills and glass are cleaned thoroughly, removing dirt, dust and marks left by weather and traffic. Whether you need monthly, fortnightly or scheduled visits, regular window cleaning helps protect your windows, keeps them looking their best and saves you time and effort.</p>
-<img src="/images/window-cleaning-service.webp"
-alt="Regular window cleaning in Doncaster for homes and business with clear, streak free results"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- Section 7 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Pressure Washing</h2>
-<p>Pressure washing is a fast and effective way to clean outdoor surfaces and restore their original look. Over time, driveways, paths, walls, decking and roofs can become dirty, slippery and stained with moss, algae and grime. Professional pressure washing removes this build-up safely, improving both appearance and safety. Clean surfaces not only look better but also last longer when kept free from damaging dirt and growth. Pressure washing is ideal for freshening up your property, preparing surfaces for painting or simply making everything look clean, tidy and well cared for.</p>
-<img src="/images/pressure-wash.webp"
-alt="Pressure washing in Doncaster for driveways, paths, decking and roofs"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- Section 8 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Other Services</h2>
-<p>Other services from Home Repairs 4U cover a wide range of additional outdoor maintenance and repair work, complementing our core offerings. These include minor outdoor repairs, such as fixing gates, fences, sheds, and decking, as well as addressing any wear and tear that can affect the safety and appearance of your property. We also extend our services to cover seasonal and one-off tasks, including external woodwork treatment, roof maintenance, and cleaning of driveways, paths, and patios. Whether it’s repairing a broken fence panel, restoring faded garden structures, or preparing surfaces for painting, these services ensure every part of your property is cared for. By combining our expertise in guttering, exterior decorating, uPVC restoration, conservatory valets, window cleaning, and pressure washing, we provide a complete solution to maintain your home inside and out. Each task is completed with attention to detail and professionalism, keeping your property safe, functional, and visually appealing. With our extended services, you can rely on Home Repairs 4U to handle all the extra jobs that make a real difference to your home’s upkeep and longevity</p>
-</section>
- 
 <!-- ✅ FAQ SECTION -->
 <section style="max-width:900px; margin:40px auto; padding:0 15px;">
 
 <h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions</h2>
 
 <div>
-<p><strong>What types of internal minor home repairs do you handle?</strong><br>
-We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear and tear.</p>
+<p><strong>How much does pressure washing cost?</strong><br>
+Prices depend on the size of the area, surface type, and how dirty it is. We offer free quotes so you know the exact price before any work begins.</p>
 
-<p><strong>Do you offer gutter cleaning and maintenance?</strong><br>
-Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage.</p>
+<p><strong>Will pressure washing damage my surfaces?</strong><br>
+No. We adjust the pressure and method to suit each surface so it is cleaned safely without causing damage.</p>
 
-<p><strong>Can you repair damaged gutters?</strong><br>
-Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency.</p>
+<p><strong>Do you use your own water and electricity?</strong><br>
+We usually use the customer’s outdoor tap and power supply. If this is an issue, just let us know and we can discuss options.</p>
 
-<p><strong>What does exterior decorating include?</strong><br>
-Exterior decorating covers external house painting, metal garden rails and gate painting, also fence painting to refresh your property's look and protect surfaces.</p>
+<p><strong>Do I need to prepare anything before you arrive?</strong><br>
+We ask that the area is clear of vehicles, furniture, or loose items so we can clean efficiently and safely.</p>
 
-<p><strong>Do you offer uPVC restoration?</strong><br>
-Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity. </p>
+<p><strong>How often should my driveway or patio be cleaned?</strong><br>
+Most properties benefit from cleaning once a year, but damp or shaded areas may need more frequent cleaning.</p>
 
-<p><strong>Can you clean my conservatory?</strong><br>
-We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard.</p>
+<p><strong>Can you remove oil, rust, and heavy stains?</strong><br>
+Many tough stains can be greatly reduced or fully removed using specialist treatments and pressure washing.</p>
 
-<p><strong>How often should I have my windows cleaned?</strong><br>
-Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained.</p>
+<p><strong>Is pressure washing safe for pets and plants?</strong><br>
+Yes. We take care around gardens and can use eco-friendly products when needed.</p>
 
-<p><strong>What surfaces can you pressure wash?</strong><br>
-We pressure wash driveways, paths, walls, decking and roofs, removing moss, algae, dirt and grime safely and effectively.</p>
+<p><strong>How long before I can use the area again?</strong><br>
+Most surfaces can be walked on after 1–2 hours once they are dry.</p>
 
-<p><strong>Are your services suitable for all property types?</strong><br>
-Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific property needs.</p>
+<p><strong>Do you clean commercial properties as well as homes?</strong><br>
+Yes. We clean shops, offices, car parks, warehouses, and other commercial buildings.</p>
 
-<p><strong>Do you offer same-day or urgent repairs?</strong><br>
-We aim to respond quickly and can often schedule repairs urgently to prevent further damage.</p>
+<p><strong>What if I’m not happy with the result?</strong><br>
+Customer satisfaction is important to us. If you are not happy, contact us and we will return to fix the issue.</p>
 
-<p><strong>Is your work insured?</strong><br>
-Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work.</p>
+<p><strong>Do you offer sealing after cleaning?</strong><br>
+Yes. We can apply protective sealants to help prevent weeds, stains, and water damage.</p>
 
-<p><strong>How do i schedule a service?</strong><br>
-Simply call us on 07735 873694 at a time convenient to you.</p>
+<p><strong>you insured to work on my property?><p><strong>
+Yes. We are fully insured, giving you peace of mind while we work.</p>
 </div>
 
+</section>
+
+
+<!-- Close -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Ready to Refresh Your Property?</h2>
+<p>After reviewing our services and FAQs, you can see how professional pressure washing improves appearance, safety, and value. Whether it’s a driveway, patio, decking, or full exterior, we’re ready to help. Contact us today for a free quote and let us bring your outdoor spaces back to life with reliable, high-quality cleaning.</p>
 </section>
 
 <!-- ✅ BOTTOM CALL BUTTON -->
@@ -316,98 +293,98 @@ document.getElementById("lightbox").style.display="none";
 "mainEntity": [
 {
 "@type": "Question",
-"name": "What types of internal minor home repairs do you handle?",
+"name": "How much does pressure washing cost?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear and tear."
+"text": "Prices depend on the size of the area, surface type, and how dirty it is. We offer free quotes so you know the exact price before any work begins."
 }
 },
 {
 "@type": "Question",
-"name": "Do you offer gutter cleaning and maintenance?",
+"name": "Will pressure washing damage my surfaces?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage."
+"text": "No. We adjust the pressure and method to suit each surface so it is cleaned safely without causing damage."
 }
 },
 {
 "@type": "Question",
-"name": "Can you repair damaged gutters?",
+"name": "Do you use your own water and electricity?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency."
+"text": "We usually use the customer’s outdoor tap and power supply. If this is an issue, just let us know and we can discuss options."
 }
 },
 {
 "@type": "Question",
-"name": "What does exterior decorating include?",
+"name": "Do I need to prepare anything before you arrive?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Exterior decorating covers external house painting, metal garden rails and gate painting, and fence painting to refresh your property's look and protect surfaces."
+"text": "We ask that the area is clear of vehicles, furniture, or loose items so we can clean efficiently and safely."
 }
 },
 {
 "@type": "Question",
-"name": "Do you offer uPVC restoration?",
+"name": "How often should my driveway or patio be cleaned?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity."
+"text": "Most properties benefit from cleaning once a year, but damp or shaded areas may need more frequent cleaning."
 }
 },
 {
 "@type": "Question",
-"name": "Can you clean my conservatory?",
+"name": "Can you remove oil, rust, and heavy stains?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard."
+"text": "Many tough stains can be greatly reduced or fully removed using specialist treatments and pressure washing."
 }
 },
 {
 "@type": "Question",
-"name": "How often should I have my windows cleaned?",
+"name": "Is pressure washing safe for pets and plants?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained."
+"text": "Yes. We take care around gardens and can use eco-friendly products when needed."
 }
 },
 {
 "@type": "Question",
-"name": "What surfaces can you pressure wash?",
+"name": "How long before I can use the area again?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We pressure wash driveways, paths, walls, decking, and roofs, removing moss, algae, dirt, and grime safely and effectively."
+"text": "Most surfaces can be walked on after 1–2 hours once they are dry."
 }
 },
 {
 "@type": "Question",
-"name": "Are your services suitable for all property types?",
+"name": "Do you clean commercial properties as well as homes?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific property needs."
+"text": "Yes. We clean shops, offices, car parks, warehouses, and other commercial buildings."
 }
 },
 {
 "@type": "Question",
-"name": "Do you offer same-day or urgent repairs?",
+"name": "What if I’m not happy with the result?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "We aim to respond quickly and can often schedule repairs urgently to prevent further damage."
+"text": "Customer satisfaction is important to us. If you are not happy, contact us and we will return to fix the issue."
 }
 },
 {
 "@type": "Question",
-"name": "Is your work insured?",
+"name": "Do you offer sealing after cleaning?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work."
+"text": "Yes. We can apply protective sealants to help prevent weeds, stains, and water damage."
 }
 },
 {
 "@type": "Question",
-"name": "How do I schedule a service?",
+"name": "Are you insured to work on my property?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Simply call us on 07735 873694 at a time convenient to you."
+"text": "Yes. We are fully insured, giving you peace of mind while we work."
 }
 }
 ]
@@ -418,86 +395,76 @@ document.getElementById("lightbox").style.display="none";
 {
 "@context": "https://schema.org",
 "@type": "LocalBusiness",
-"name": "Sparkle Window Cleaning",
-"image": "https://yourwebsite.com/logo.jpg",
-"url": "https://yourwebsite.com/locations/LOCATION_SLUG",
-"telephone": "+44-1234-567890",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp,
+"url": "https://yourwebsite.com/local/pressure-washing-carcroft.html",
+"telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
 "@type": "PostalAddress",
-"streetAddress": "123 Business Street",
-"addressLocality": "London",
-"addressRegion": "Greater London",
-"postalCode": "WC1A 1AA",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
 "addressCountry": "GB"
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 51.5074,
-"longitude": -0.1278
+"latitude": 53.583,
+"longitude": -0.180
 },
 "areaServed": [
-{"@type": "Place", "name": "CITY_NAME"}
+{"@type": "Place", "name": "Carcroft"}
 ],
 "makesOffer": [
 {
 "@type": "Offer",
 "itemOffered": {
 "@type": "Service",
-"name": "Window Cleaning - Residential",
-"description": "We clean residential windows at your property in CITY_NAME.",
-"serviceType": "Window cleaning",
-"areaServed": ["CITY_NAME"]
+"name": "Pressure Washing Service",
+"description": "Pressure washing service available in Carcroft.",
+"serviceType": "Pressure Washing Service",
+"areaServed": ["Carcroft"]
 }
 },
 {
 "@type": "Offer",
 "itemOffered": {
 "@type": "Service",
-"name": "Window Cleaning - Commercial",
-"description": "We clean commercial windows for offices and shops in CITY_NAME.",
-"serviceType": "Window cleaning",
-"areaServed": ["CITY_NAME"]
+"name": "Pressure Washing Driveways",
+"description": "Pressure cleaning drives and patios in Carcroft.",
+"serviceType": "Pressure Washing Driveways",
+"areaServed": ["Carcroft"]
 }
 },
 {
 "@type": "Offer",
 "itemOffered": {
 "@type": "Service",
-"name": "Gutter Cleaning",
-"description": "We clean gutters at residential and commercial properties in CITY_NAME.",
-"serviceType": "Gutter cleaning",
-"areaServed": ["CITY_NAME"]
+"name": "Pressure Cleaning Walls",
+"description": "Pressure cleaning brick and rendered walls in Carcroft.",
+"serviceType": "Pressure Cleaning Walls",
+"areaServed": ["Carcroft"]
 }
 },
 {
 "@type": "Offer",
 "itemOffered": {
 "@type": "Service",
-"name": "Pressure Washing",
-"description": "We provide pressure washing for driveways, patios, and exterior surfaces in CITY_NAME.",
-"serviceType": "Pressure washing",
-"areaServed": ["CITY_NAME"]
+"name": "Jet Cleaning Decking",
+"description": "Pressure washing for restoring wooden decking in Carcroft.",
+"serviceType": "Jet Cleaning Decking",
+"areaServed": ["Carcroft"]
 }
 },
 {
 "@type": "Offer",
 "itemOffered": {
 "@type": "Service",
-"name": "Solar Panel Cleaning",
-"description": "We clean solar panels to maintain efficiency and shine in CITY_NAME.",
-"serviceType": "Solar panel cleaning",
-"areaServed": ["CITY_NAME"]
-}
-},
-{
-"@type": "Offer",
-"itemOffered": {
-"@type": "Service",
-"name": "Awning & Canopy Cleaning",
-"description": "We clean awnings and canopies for residential and commercial properties in CITY_NAME.",
-"serviceType": "Awning & canopy cleaning",
-"areaServed": ["CITY_NAME"]
+"name": "Full Range of Pressure Washing Services",
+"description": "Full list of pressure washing services we provide in  Carcroft.",
+"serviceType": "Full Range of Pressure Washing Services",
+"areaServed": ["Carcroft"]
 }
 }
 ],
@@ -517,7 +484,6 @@ document.getElementById("lightbox").style.display="none";
 ],
 "sameAs": [
 "https://www.facebook.com/sparklewindowcleaning",
-"https://www.instagram.com/sparklewindowcleaning"
 ]
 }
 </script>
