--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -397,7 +397,7 @@ document.getElementById("lightbox").style.display="none";
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp,
-"url": "https://yourwebsite.com/local/pressure-washing-carcroft.html",
+"url": "https://homerepairs4u/local/pressure-washing-carcroft.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -471,19 +471,21 @@ document.getElementById("lightbox").style.display="none";
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
-"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
-"opens": "08:00",
-"closes": "18:00"
-},
-{
-"@type": "OpeningHoursSpecification",
-"dayOfWeek": ["Saturday"],
-"opens": "09:00",
-"closes": "14:00"
+"dayOfWeek": [
+"Monday",
+"Tuesday",
+"Wednesday",
+"Thursday",
+"Friday",
+"Saturday",
+"Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
 }
 ],
 "sameAs": [
-"https://www.facebook.com/sparklewindowcleaning",
+"https://www.facebook.com/profile.php?id=61584395621256",
 ]
 }
 </script>
