--- a/local/pressure-washing-carcroft.html
+++ b/local/pressure-washing-carcroft.html
@@ -122,7 +122,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Section 1 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Pressure Washing Carcroft</h2>
+<h1>Pressure Washing Carcroft</h1>
 <p>Our pressure washing service in Carcroft is designed to restore the appearance of your property quickly and effectively. Over time, outdoor surfaces collect dirt, algae, moss, oil stains and traffic marks that make them look tired and neglected. Using professional-grade pressure washing equipment, we remove deep-set grime from driveways, patios, paths, walls and decking without damaging the surface underneath. Each job is assessed carefully so the correct pressure and cleaning method is used for your specific material, whether it is block paving, concrete, tarmac or natural stone. Pressure washing not only improves how your property looks, it also makes areas safer by removing slippery growth and built-up residue. For homeowners and businesses in Carcroft, our service offers a fast, affordable way to refresh outdoor spaces and protect their surfaces from long-term damage. We take pride in delivering clean results, friendly service and lasting value.</p>
 <img src="/images/pressure-washing-patios.webp"
 alt="Pressure washing driveway removing oil stains, moss and dirt from block paving surface."
@@ -137,7 +137,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2>Pressure Washing Driveways</h2>
 <p>Pressure washing driveways is one of the most effective ways to restore the look of your property’s exterior. Over time, driveways become covered in dirt, algae, moss, oil stains and tyre marks that make them look worn and untidy. Professional pressure washing removes these deep-set contaminants using powerful equipment that lifts grime without damaging the surface. Whether your driveway is block paving, concrete, tarmac or natural stone, the correct pressure and cleaning method is used to achieve the best results. Cleaning your driveway not only improves its appearance but also makes it safer by removing slippery growth that can cause accidents. Regular pressure washing also helps protect the surface, preventing long-term staining and reducing the risk of cracks caused by trapped dirt and moisture. A freshly cleaned driveway instantly boosts kerb appeal, making your home or business look well cared for and inviting.</p>
 <img src="/images/pressure-washing-driveway.webp"
-alt="Guttering services in Doncaster including cleaning, clearing, repairs and full gutter replacement for homes"
+alt="Pressure washing driveway removing oil stains, moss and dirt from block paving surface"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -241,7 +241,7 @@ Customer satisfaction is important to us. If you are not happy, contact us and w
 <p><strong>Do you offer sealing after cleaning?</strong><br>
 Yes. We can apply protective sealants to help prevent weeds, stains, and water damage.</p>
 
-<p><strong>you insured to work on my property?><p><strong>
+<p><strong>Are you insured to work on my property?><p><strong>
 Yes. We are fully insured, giving you peace of mind while we work.</p>
 </div>
 
@@ -396,7 +396,7 @@ document.getElementById("lightbox").style.display="none";
 "@context": "https://schema.org",
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
-"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp,
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
 "url": "https://homerepairs4u/local/pressure-washing-carcroft.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
@@ -485,7 +485,7 @@ document.getElementById("lightbox").style.display="none";
 }
 ],
 "sameAs": [
-"https://www.facebook.com/profile.php?id=61584395621256",
+"https://www.facebook.com/profile.php?id=61584395621256"
 ]
 }
 </script>
